--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Godines Web</title>
+    <title>Filosofía de la Religión</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <meta name="keywords" content="pagina, web, pagina web, aprendiendo">
     <meta name="description" content="Godines Web es mi primera pagina para aprender HTML5">
@@ -17,12 +17,26 @@
     <header>
         <nav>
             <ul>
-                <center><h2>LIMITLESS BLOG</h2></center>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="articulos.html">Articulos</a></li>
+                <center><h2>Filosofía de la Religión</h2></center>
+                <li><a href="index.html">Actualizar Inicio</a></li>
             </ul>
         </nav>
     </header>
+    <center><h2>Inicio</h2></center>
+    <div>
+        <br>
+        <h1>
+            Artículos:
+        </h1>
+        <ul>
+            <li><p><a href="logica.html">Lógica</a></p></li>
+            <li><p><a href="existencia.html">Existencia</a></p></li>
+            <li><p><a href="Causalidad.html">Causalidad</a></p></li>
+            <li><p><a href="Realismo Causal.html">Realismo Causal</a></p></li>
+            <li><p><a href="Argumento del Cambio Aristotelico Una revision tecnica.html">Argumento del Cambio Aristotélico: Una revisión técnica</a></p></li>
+            <li><p><a href="El argumento del Ente y la esencia Una revision tecnica.html">El argumento del Ente y la esencia: Una revision tecnica</a></p></li>
+        </ul>
+    </div>
     <footer>
         <br><br><br><br>
         <h3>Contacto:</h3>
