--- a/logica.html
+++ b/logica.html
@@ -23,7 +23,7 @@
         </nav>
     </header>
     <article><section>
-        <center><h1 style="font-size: xx-large;">Logica</h1></center>
+        <center><h1 style="font-size: xx-large;">Lógica</h1></center>
         <h3>Símbolos:</h3>
         <p>⊃ , → Condicional</p>
         <p>↔ , ⇔ Bicondicional</p>
