--- a/logica.html
+++ b/logica.html
@@ -56,7 +56,7 @@
         <p><b>Principio de Tercero Excluso (PTE): </b>(A ⊻ ¬A)</p>
         <p><b>Posibilidad: </b>proposición o conjunto de proposiciones consistente con los principios lógicos fundamentales (PI, PNC).</p>
         <p><b>Necesidad: </b>proposición posible cuya falsedad implica la violación de algún principio lógico fundamental.</p>
-        <p><b>Mundo Posible: </b>proposición o conjunto de proposiciones posibles.</p>
+        <p><b>Mundo Posible: </b>escenario del mundo concreto actual o no-actual, el cual pudo o puede ser verdad, en el cual una o un conjunto de proposiciones son verdaderas.</p>
     </section></article>
     <footer></footer>
 </body>
